# scad-dots

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
scad-dots-derive/: Cargo.toml
scad-dots-derive/src/: lib.rs
src/: core.rs  cuboid.rs  errors.rs  harness.rs  lib.rs  parse.rs  post.rs  rect.rs  render.rs  triangle.rs  utils.rs
src/core/: chain.rs  cylinder.rs  dot.rs  extrusion.rs  mod.rs  tree.rs  utils.rs
tests/: test.rs
tests/good_models/: basic_finger_block.scad  cuboid_center.scad  cuboid_center_marks.scad  cuboid_chamfer_hole.scad  cuboid_corners.scad  cuboid_frame.scad  cuboid_from_dot.scad  cuboid_open_bot.scad  cuboid_sides.scad  cuboid_y_axis.scad  cylinder_spec.scad  cylinder_spec2.scad  cylinder_spec3.scad  cylinder_spec4.scad  dot_center_marks.scad  dot_cyl.scad  dot_fancy_translation.scad  dot_fancy_translation2.scad  dot_rot.scad  dot_rot_operator.scad  explode_radially.scad  explode_radially2.scad  extrude1.scad  face_connectors.scad  map_cuboid.scad  map_post.scad  map_rect.scad  mirror.scad  post_ends.scad  post_old_align.scad  rect2.scad  rect_center_marks.scad  rect_cut_corners.scad  rect_y_axis.scad  simple_cuboid.scad  simple_dot.scad  simple_post.scad  simple_rect.scad  snake.scad  spiral_cuboid.scad  (+1 more)
